# diceware-cli

./: BUILD.bazel  README.md  WORKSPACE
cmd/diceware/: BUILD.bazel  main.go
