load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "diceware_lib",
    srcs = ["main.go"],
    importpath = "github.com/EvyBongers/diceware-cli/cmd/diceware",
    visibility = ["//visibility:private"],
    deps = ["@com_github_sethvargo_go_diceware//diceware"],
)

go_binary(
    name = "diceware",
    embed = [":diceware_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
